Upgrade java version to 17